2009-12-03 Eitan Adler <eitanadlerlist@gmail.com>
	* doc/syntax/makefile.nanorc - Fix poor regex for all alpha characters which sometimes leads to
	  error messages, reported by gibboris@gmail.com.

2009-12-02 Chris Allegretta <chrisa@asty.org>
	* text.c (add_undo, do_undo, do_redo) - Do not execute cases for SPLIT when DISABLE_WRAPPING
	  is defined.  Fixes Savannah bug 28151 (anon).

2009-12-02 Jordi Mallach <jordi@gnu.org>
	* doc/man/nano.1: Fix escaping of hyphens for the -$ option.

2009-12-01 Kamil Dudka <kdudka@redhat.com>
	* chars.c, file.c - Better handle unused results for things like mbtowc(), new
	  macro IGNORE_CALL_RESULT.

2009-12-01 Chris Allegretta <chrisa@asty.org>
	* global.c (shortcut_init) - Remove redundant entries for ^Y/^V reported by
	  Christian Weisgerber.
	* doc/man/nanorc.5 - Fix typo in Meta documentation, reported by gibboris@gmail.com.

2009-12-01 David Lawrence Ramsey <pooka109@gmail.com>
	* global.c (shortcut_init) - Add support for ^P and ^N in the help menu.
	* Update documentation for 2.2 features including sample nanorc file, texinfo
	  file, man pages, UPGRADE file, and update copyright noticed for the current year.

GNU nano 2.2.0 - 2009.11.30
2009-11-29 Chris Allegretta <chrisa@asty.org>
	* prompt.c (get_prompt_string) - Universally handle help key when is 
disabled.  Fixes Savannah
	  bug 28117 by David Lawrence Ramsey <pooka109@gmail.com>.
	* chars.c, files.c: Add junk vars to silence the compiler.  Sigh.

2009-11-29 David Lawrence Ramsey <pooka109@gmail.com>
	* Change several *chars to const char, additional cleanups and casts to make compilers happier.
	* global.c: Fix replace and insert file initializations for proper compilation options.
	* nano.c (do_suspend): Update comments to reflect actual code path, bad Chris and thanks for
	  noticing Jordi.
	* configure.ac: Fix typos

2009-11-27 Chris Allegretta <chrisa@asty.org>
	* nano.c (do_suspend): Don't clear the screen but do move the cursor down to the last line